Time added and issues solved

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li id="call-contact"><a href="#">Contact</a></li>
         </ul>
       </nav>
+      <p id="date-time"></p>
     </header>
 
     <section class="container" id="books"></section>
